[package]
name = "memscope-stress-test"
version = "0.1.0"
edition = "2021"
default-run = "memscope-stress-test"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
rayon = "1.7"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"
memscope-rs = "0.1"
